--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
     "$schema": "https://www.schemastore.org/package.json",
     "private": true,
     "type": "module",
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.2.0",
+        "bootstrap": "^5.3.8"
+    },
     "scripts": {
         "build": "vite build",
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.18",
         "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.24",
         "axios": "^1.11.0",
